tests/golden/syn-monitoring/openshift4-logging/openshift4-logging/70_monitoring_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    monitoring.syn.tools/monitoring: 'true'
    name: syn-monitoring-openshift4-logging
  name: syn-monitoring-openshift4-logging
