tests/golden/syn-monitoring/openshift4-logging/openshift4-logging/70_monitoring_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-prometheus-monitoring
  name: allow-from-prometheus-monitoring
  namespace: openshift-logging
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: syn-monitoring
  podSelector: {}
  policyTypes:
    - Ingress
